Remove 'Nested elements' headings

--- a/docs/faststore/components/atoms/slider.mdx
+++ b/docs/faststore/components/atoms/slider.mdx
@@ -144,9 +144,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested elements
-
-#### Thumb
+### Thumb
 
 <TokenTable>
   <TokenRow token="--fs-slider-thumb-size" value="var(--fs-spacing-4)" />
@@ -181,7 +179,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Absolute values
+### Absolute values
 
 <TokenTable>
   <TokenRow
@@ -191,7 +189,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Value label
+### Value label
 
 <TokenTable>
   <TokenRow
