--- a/docs/faststore/components/molecules/accordion.mdx
+++ b/docs/faststore/components/molecules/accordion.mdx
@@ -197,9 +197,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Item
+### Item
 
 <TokenTable>
   <TokenRow
@@ -213,7 +211,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Button
+### Button
 
 <TokenTable>
   <TokenRow
@@ -241,7 +239,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Panel
+### Panel
 
 <TokenTable>
   <TokenRow
