--- a/docs/faststore/components/molecules/breadcrumb.mdx
+++ b/docs/faststore/components/molecules/breadcrumb.mdx
@@ -84,9 +84,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-breadcrumb-margin-left" value="var(--fs-spacing-0)" />
 </TokenTable>
 
-## Nested Elements
-
-### List Item
+## List Item
 
 <TokenTable>
   <TokenRow
@@ -103,7 +101,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-breadcrumb-list-item-max-width-mobile" value="30%" />
 </TokenTable>
 
-### Link
+## Link
 
 <TokenTable>
   <TokenRow
@@ -113,7 +111,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Link Home
+## Link Home
 
 <TokenTable>
   <TokenRow
@@ -138,7 +136,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Divider
+## Divider
 
 <TokenTable>
   <TokenRow
@@ -161,7 +159,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Dropdown Button
+## Dropdown Button
 
 <TokenTable>
   <TokenRow
