--- a/docs/faststore/components/molecules/carousel.mdx
+++ b/docs/faststore/components/molecules/carousel.mdx
@@ -147,9 +147,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Track
+### Track
 
 <TokenTable>
   <TokenRow
@@ -164,7 +162,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Item
+### Item
 
 <TokenTable>
   <TokenRow
@@ -173,7 +171,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Controls
+### Controls
 
 <TokenTable>
   <TokenRow token="--fs-carousel-controls-width" value="3.125rem" />
@@ -213,7 +211,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Bullets
+### Bullets
 
 <TokenTable>
   <TokenRow
