--- a/docs/faststore/components/molecules/cart-item.mdx
+++ b/docs/faststore/components/molecules/cart-item.mdx
@@ -129,9 +129,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Image
+### Image
 
 <TokenTable>
   <TokenRow
@@ -145,7 +143,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -160,7 +158,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### SKUs
+### SKUs
 
 <TokenTable>
   <TokenRow
@@ -187,7 +185,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-cart-item-skus-row-gap" value="var(--fs-spacing-0)" />
 </TokenTable>
 
-#### Prices
+### Prices
 
 <TokenTable>
   <TokenRow token="--fs-cart-item-price-gap" value="var(--fs-spacing-1)" />
