--- a/docs/faststore/components/molecules/gift.mdx
+++ b/docs/faststore/components/molecules/gift.mdx
@@ -137,9 +137,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ---
 
-### Nested Elements
-
-#### Content
+### Content
 
 <TokenTable>
   <TokenRow
@@ -149,7 +147,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-gift-content-row-gap" value="var(--fs-spacing-0)" />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow token="--fs-gift-title-line-height" value="1.25" />
@@ -161,7 +159,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Icon
+### Icon
 
 <TokenTable>
   <TokenRow token="--fs-gift-icon-size" value="1.75rem" />
@@ -179,7 +177,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Price
+### Price
 
 <TokenTable>
   <TokenRow token="--fs-gift-price-size" value="var(--fs-text-size-legend)" />
