--- a/docs/faststore/components/molecules/modal.mdx
+++ b/docs/faststore/components/molecules/modal.mdx
@@ -117,9 +117,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-modal-transition-out-function" value="ease-in" />
 </TokenTable>
 
-### Nested elements
-
-#### Header
+### Header
 
 <TokenTable>
   <TokenRow
@@ -153,7 +151,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-modal-header-close-button-position-right" value="0" />
 </TokenTable>
 
-#### Body
+### Body
 
 <TokenTable>
   <TokenRow
