--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -110,34 +110,32 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### CTA (Call to Action) ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+### CTA (Call to Action) ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
 
 <TokenTable>
   <TokenRow token="--fs-region-bar-cta-margin-left" value="auto" />
   <TokenRow token="--fs-region-bar-cta-text-decoration" value="underline" />
 </TokenTable>
 
-#### Message ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+### Message ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
 
 <TokenTable>
   <TokenRow token="--fs-region-bar-message-margin-right" value="auto" />
 </TokenTable>
 
-#### Postal Code ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
+### Postal Code ![deprecated](https://img.shields.io/badge/deprecated-lightgrey)
 
 <TokenTable>
   <TokenRow token="--fs-region-bar-postal-code-margin-right" value="auto" />
 </TokenTable>
 
-#### Icon
+### Icon
 
 <TokenTable>
   <TokenRow token="--fs-region-bar-icon-margin-right" value="var(--fs-spacing-1)" />
 </TokenTable>
 
-#### Location
+### Location
 
 <TokenTable>
   <TokenRow token="--fs-region-bar-location-height" value="var(--fs-spacing-4)" />
