--- a/docs/faststore/components/molecules/search-products.mdx
+++ b/docs/faststore/components/molecules/search-products.mdx
@@ -158,9 +158,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Header
+### Header
 
 <TokenTable>
   <TokenRow
@@ -173,7 +171,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -183,7 +181,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-search-products-title-line-height" value="1.5" />
 </TokenTable>
 
-#### Item
+### Item
 
 <TokenTable>
   <TokenRow
@@ -201,7 +199,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Item control
+### Item control
 
 <TokenTable>
   <TokenRow
@@ -214,7 +212,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Item image
+### Item image
 
 <TokenTable>
   <TokenRow
@@ -228,7 +226,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-search-product-item-image-size" value="3.5rem" />
 </TokenTable>
 
-#### Item title
+### Item title
 
 <TokenTable>
   <TokenRow
@@ -247,7 +245,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Item price
+### Item price
 
 <TokenTable>
   <TokenRow
