--- a/docs/faststore/components/molecules/search-top.mdx
+++ b/docs/faststore/components/molecules/search-top.mdx
@@ -97,9 +97,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Header
+### Header
 
 <TokenTable>
   <TokenRow
@@ -112,7 +110,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -122,7 +120,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-search-top-title-line-height" value="1.5" />
 </TokenTable>
 
-#### Item
+### Item
 
 <TokenTable>
   <TokenRow
