--- a/docs/faststore/components/molecules/table.mdx
+++ b/docs/faststore/components/molecules/table.mdx
@@ -465,9 +465,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Head
+### Head
 
 <TokenTable>
   <TokenRow token="--fs-table-head-weight" value="var(--fs-text-weight-bold)" />
@@ -475,7 +473,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-table-head-padding-y" value="var(--fs-spacing-2)" />
 </TokenTable>
 
-#### Cell
+### Cell
 
 <TokenTable>
   <TokenRow token="--fs-table-cell-padding-x" value="var(--fs-spacing-3)" />
