--- a/docs/faststore/components/molecules/textarea-field.mdx
+++ b/docs/faststore/components/molecules/textarea-field.mdx
@@ -160,9 +160,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested elements
-
-#### Label
+### Label
 
 <TokenTable>
   <TokenRow
@@ -193,7 +191,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Button
+### Button
 
 <TokenTable>
   <TokenRow
