--- a/docs/faststore/components/molecules/toast.mdx
+++ b/docs/faststore/components/molecules/toast.mdx
@@ -200,9 +200,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Icon
+### Icon
 
 <TokenTable>
   <TokenRow
@@ -224,7 +222,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow token="--fs-toast-title-size" value="var(--fs-text-size-body)" />
@@ -236,7 +234,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-toast-title-margin-left" value="var(--fs-spacing-3)" />
 </TokenTable>
 
-#### Message
+### Message
 
 <TokenTable>
   <TokenRow
