--- a/docs/faststore/components/molecules/toggle.mdx
+++ b/docs/faststore/components/molecules/toggle.mdx
@@ -149,9 +149,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Knob
+### Knob
 
 <TokenTable>
   <TokenRow token="--fs-toggle-knob-shadow" value="var(--fs-shadow)" />
@@ -212,7 +210,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Icon
+### Icon
 
 <TokenTable>
   <TokenRow token="--fs-toggle-knob-icon-color" value="transparent" />
