--- a/docs/faststore/components/molecules/tooltip.mdx
+++ b/docs/faststore/components/molecules/tooltip.mdx
@@ -102,9 +102,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested elements
-
-#### Indicator
+### Indicator
 
 <TokenTable>
   <TokenRow
