--- a/docs/faststore/components/organisms/banner-text.mdx
+++ b/docs/faststore/components/organisms/banner-text.mdx
@@ -236,9 +236,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Button Link
+### Button Link
 
 <TokenTable>
   <TokenRow token="--fs-banner-text-button-link-min-width" value="11.25rem" />
@@ -248,7 +246,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
