--- a/docs/faststore/components/organisms/cart-sidebar.mdx
+++ b/docs/faststore/components/organisms/cart-sidebar.mdx
@@ -109,9 +109,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### List
+### List
 
 <TokenTable>
   <TokenRow
@@ -120,7 +118,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Footer
+### Footer
 
 <TokenTable>
   <TokenRow
