--- a/docs/faststore/components/organisms/filter-slider.mdx
+++ b/docs/faststore/components/organisms/filter-slider.mdx
@@ -176,9 +176,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Content
+### Content
 
 <TokenTable>
   <TokenRow
@@ -191,7 +189,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -205,7 +203,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-filter-slider-title-line-height" value="1.12" />
 </TokenTable>
 
-#### Footer
+### Footer
 
 <TokenTable>
   <TokenRow token="--fs-filter-slider-footer-width" value="100%" />
@@ -227,7 +225,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Footer Buttons
+### Footer Buttons
 
 <TokenTable>
   <TokenRow token="--fs-filter-slider-footer-button-clear-width" value="40%" />
