--- a/docs/faststore/components/organisms/filter.mdx
+++ b/docs/faststore/components/organisms/filter.mdx
@@ -165,9 +165,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow token="--fs-filter-title-height" value="var(--fs-spacing-6)" />
@@ -179,7 +177,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-filter-title-line-height" value="1.25" />
 </TokenTable>
 
-#### Accordion
+### Accordion
 
 <TokenTable>
   <TokenRow
@@ -197,7 +195,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Accordion Item Button
+### Accordion Item Button
 
 <TokenTable>
   <TokenRow
@@ -241,7 +239,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Accordion Item List
+### Accordion Item List
 
 <TokenTable>
   <TokenRow
@@ -250,7 +248,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### List Item
+### List Item
 
 <TokenTable>
   <TokenRow
@@ -259,7 +257,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### List Item Checkbox
+### List Item Checkbox
 
 <TokenTable>
   <TokenRow token="--fs-filter-list-item-checkbox-width" value="1.25rem" />
@@ -269,7 +267,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### List Item Label
+### List Item Label
 
 <TokenTable>
   <TokenRow token="--fs-filter-list-item-label-width" value="100%" />
@@ -284,7 +282,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-filter-list-item-label-line-height" value="1.25" />
 </TokenTable>
 
-#### List Item Badge
+### List Item Badge
 
 <TokenTable>
   <TokenRow
