--- a/docs/faststore/components/organisms/hero.mdx
+++ b/docs/faststore/components/organisms/hero.mdx
@@ -259,15 +259,13 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-hero-text-line-height" value="1.33" />
 </TokenTable>
 
-### Nested Elements
-
-#### Image
+### Image
 
 <TokenTable>
   <TokenRow token="--fs-hero-image-border-radius" value="0" />
 </TokenTable>
 
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -281,7 +279,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-hero-title-line-height" value="1.1" />
 </TokenTable>
 
-#### Subtitle
+### Subtitle
 
 <TokenTable>
   <TokenRow
