--- a/docs/faststore/components/organisms/image-gallery.mdx
+++ b/docs/faststore/components/organisms/image-gallery.mdx
@@ -175,9 +175,7 @@ const currentImage = images[selectedImageIdx]
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Controls
+### Controls
 
 <TokenTable>
   <TokenRow
@@ -200,7 +198,7 @@ const currentImage = images[selectedImageIdx]
   />
 </TokenTable>
 
-#### Current Selected Image
+### Current Selected Image
 
 <TokenTable>
   <TokenRow token="--fs-image-gallery-current-height" value="33.125rem" />
@@ -210,7 +208,7 @@ const currentImage = images[selectedImageIdx]
   />
 </TokenTable>
 
-#### Selector
+### Selector
 
 <TokenTable>
   <TokenRow
