--- a/docs/faststore/components/organisms/navbar.mdx
+++ b/docs/faststore/components/organisms/navbar.mdx
@@ -119,9 +119,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Navbar Header
+### Navbar Header
 
 <TokenTable>
   <TokenRow token="--fs-navbar-header-padding" value="0 var(--fs-spacing-0)" />
@@ -136,7 +134,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Search
+### Search
 
 <TokenTable>
   <TokenRow
@@ -149,7 +147,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Search Expanded
+### Search Expanded
 
 <TokenTable>
   <TokenRow
