--- a/docs/faststore/components/organisms/newsletter.mdx
+++ b/docs/faststore/components/organisms/newsletter.mdx
@@ -223,9 +223,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -238,7 +236,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Icon
+### Icon
 
 <TokenTable>
   <TokenRow token="--fs-newsletter-icon-size" value="var(--fs-spacing-5)" />
