--- a/docs/faststore/components/organisms/out-of-stock.mdx
+++ b/docs/faststore/components/organisms/out-of-stock.mdx
@@ -65,9 +65,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -90,7 +88,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Message
+### Message
 
 <TokenTable>
   <TokenRow
@@ -117,7 +115,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Button
+### Button
 
 <TokenTable>
   <TokenRow token="--fs-out-of-stock-button-width" value="100%" />
