--- a/docs/faststore/components/organisms/payment-methods.mdx
+++ b/docs/faststore/components/organisms/payment-methods.mdx
@@ -61,9 +61,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Design tokens
 
-### Nested Elements
-
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -77,7 +75,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-payment-methods-title-line-height" value="1.25" />
 </TokenTable>
 
-#### Flags
+### Flags
 
 <TokenTable>
   <TokenRow
@@ -90,7 +88,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Flag
+### Flag
 
 <TokenTable>
   <TokenRow
