--- a/docs/faststore/components/organisms/slide-over.mdx
+++ b/docs/faststore/components/organisms/slide-over.mdx
@@ -141,9 +141,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Header
+### Header
 
 <TokenTable>
   <TokenRow
