--- a/docs/faststore/components/molecules/sku-selector.mdx
+++ b/docs/faststore/components/molecules/sku-selector.mdx
@@ -162,9 +162,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-sku-selector-text-size" value="var(--fs-text-size-1)" />
 </TokenTable>
 
-### Nested Elements
-
-#### Option
+### Option
 
 <TokenTable>
   <TokenRow
