--- a/docs/faststore/components/organisms/product-shelf.mdx
+++ b/docs/faststore/components/organisms/product-shelf.mdx
@@ -268,9 +268,7 @@ You can use [ProductCard variants](https://developers.vtex.com/docs/guides/fasts
 
 ## Design tokens
 
-### Nested Elements
-
-#### Items
+### Items
 
 <TokenTable>
   <TokenRow token="--fs-product-shelf-items-gap" value="var(--fs-grid-gap-1)" />
