--- a/docs/faststore/components/organisms/shipping-simulation.mdx
+++ b/docs/faststore/components/organisms/shipping-simulation.mdx
@@ -106,9 +106,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-### Nested Elements
-
-#### Title
+### Title
 
 <TokenTable>
   <TokenRow
@@ -126,7 +124,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-shipping-simulation-title-line-height" value="1.2" />
 </TokenTable>
 
-#### Link
+### Link
 
 <TokenTable>
   <TokenRow
@@ -135,7 +133,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Header
+### Header
 
 <TokenTable>
   <TokenRow
@@ -144,7 +142,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
-#### Subtitle
+### Subtitle
 
 <TokenTable>
   <TokenRow
@@ -158,7 +156,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   <TokenRow token="--fs-shipping-simulation-subtitle-line-height" value="1.5" />
 </TokenTable>
 
-#### Location
+### Location
 
 <TokenTable>
   <TokenRow
