--- a/docs/faststore/components/atoms/slider.mdx
+++ b/docs/faststore/components/atoms/slider.mdx
@@ -100,6 +100,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
         min={{ absolute: 0, selected: 5 }}
         max={{ absolute: 50, selected: 45 }}
         absoluteValuesLabel={{ min: "0", max: "50" }}
+        getAriaValueText={(value) => `${value} units`}
       />
     </OverviewSection>
   </Tab>
